--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "sequelize": "^6.32.1",
+    "sequelize-typescript": "^2.1.5",
+    "ts-node": "^10.9.1"
   }
 }
