--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "scripts": {
-    "start": "node ./dist/app.js",
+    "start": "nodemon --watch 'src/**' --ext 'ts' --exec ts-node server.ts",
+    "old-start": "node ./dist/app.js",
     "dev": "nodemon -L -e ts --exec \"npm run build && npm start\"",
     "build": "tsc"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/node": "^20.5.8",
     "@types/pg": "^8.10.2",
     "dotenv": "^16.3.1",
     "nodemon": "^3.0.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "pg": "^8.11.3",
     "sequelize": "^6.32.1",
